# ekodide

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: android-build.yml  android-instrumented.yml
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  debug.keystore  proguard-rules.pro
android/app/src/androidTest/kotlin/com/ekodide/android/: CryptoInstrumentedTest.kt  ServidorHttpInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/ekodide/android/: BootReceiver.kt  FonteSaf.kt  MainActivity.kt  ServidorService.kt
android/app/src/main/kotlin/com/ekodide/android/core/: Acervo.kt  CaixaPostal.kt  CanonicalJson.kt  Cofre.kt  Frase.kt  Hkdf.kt  JsonParser.kt  Lacre.kt
android/app/src/main/kotlin/com/ekodide/android/net/: Vizinhanca.kt
android/app/src/main/kotlin/com/ekodide/android/server/: FonteCompartilhada.kt  Recebedor.kt  ServidorHttp.kt
android/app/src/main/kotlin/com/ekodide/android/ui/: Estilo.kt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/test/kotlin/com/ekodide/android/core/: AcervoTest.kt  CaixaPostalTest.kt  CryptoVectorsTest.kt  DesempacotarTest.kt  FraseTest.kt  HkdfRfcTest.kt
android/app/src/test/kotlin/com/ekodide/android/net/: VizinhancaTest.kt
android/app/src/test/kotlin/com/ekodide/android/server/: RecebedorTest.kt  ServidorHttpTest.kt
android/gradle/: libs.versions.toml
contrib/termux/: README.md  start-ekodide-serve.sh
ekodide/: __init__.py  acervo.py  buscador.py  caixa_postal.py  carteiro.py  cli.py  cofre.py  config.py  cortina.py  frase.py  lacre.py  portal.py  recebedor.py  vizinhanca.py
tests/: test_acervo.py  test_caixa_postal.py  test_cli.py  test_cofre.py  test_config.py  test_cortina.py  test_frase.py  test_lacre.py  test_portal.py  test_puxar.py  test_vizinhanca.py  test_voo.py
